tests/errors/parser-dangling.spcasmtest
org 0
adc a,x
endasm 50
